--- a/Dal/Dal.csproj
+++ b/Dal/Dal.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.4.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
   </ItemGroup>
 
   <ItemGroup>
